# rules_go_static

./: BUILD.bazel  WORKSPACE  main.go
