load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ashi009/rules_go_static
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ashi009/rules_go_static",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_sys//unix:go_default_library"],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "main-static",
    embed = [":go_default_library"],
    static = "on",
    visibility = ["//visibility:public"],
)
